# example-flow.yaml

appId: com.kmichno.rnsetupcicreateexpostackpnpm
---
- launchApp

# The following two steps skip through the Expo development server screen.
# This is only needed in Expo projects using a development build.
# Feel free to remove them if they are unnecessary in your setup.
- runFlow:
    when:
      visible: 'Development Build'
    commands:
      - tapOn:
          text: http://.*:8081

- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn:
          point: 25%, 25%

# Change to whatever matches your app welcome screen!
- extendedWaitUntil:
    visible: 'Home'
    timeout: 120000
